# infotecs

./: 127.0.0.1:5000  CMakeLists.txt  README.md  logs.txt  test_filter_log.txt  test_log.txt
app/: CMakeLists.txt  main.cpp
logger/: CMakeLists.txt  file_logger_output.cpp  file_logger_output.hpp  ilogger_output.hpp  logger.cpp  logger.hpp  logger_types.hpp  socket_logger_output.cpp  socket_logger_output.hpp
monitor/: CMakeLists.txt  main.cpp  socket_listener.cpp  socket_listener.hpp  stats_collector.cpp  stats_collector.hpp
tests/: test_logger.cpp
